# Auto_AICoding_Harness

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
.codegraph/: daemon.pid
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
core/: __init__.py  approval.py  command_policy.py  context.py  context_manifest.py  doctor.py  profile.py  rca.py  review.py  review_gate.py  safe_write.py  skill_install.py  state.py  state_machine.py  subagent.py  task_chain.py  task_state.py  template.py  template_update.py  verification.py
docs/: install-targets.md
examples/: README.md
examples/cpp-linux-backend-mini/: CMakeLists.txt  README.md
examples/cpp-linux-backend-mini/include/: echo_server.h
examples/cpp-linux-backend-mini/src/: echo_server.cpp  main.cpp
examples/cpp-linux-backend-mini/tests/: test_echo_server.cpp
global/: AGENTS.md.template
prompts/: README.md  bootstrap-local-agent.md
schemas/: profile.schema.json  skills-install.schema.json  state.schema.json
scripts/: README.md  ai_check.sh
skills/: README.md
system/: AGENTS.global.md
templates/: README.md
tests/: test_ai_approve_reject_all_gates.py  test_ai_approve_reject_diff.py  test_ai_context_handoff.py  test_ai_dispatch.py  test_ai_doctor.py  test_ai_init_medium.py  test_ai_init_small.py  test_ai_init_small.sh  test_ai_review_diff.py  test_ai_review_medium.py  test_ai_review_spec_plan_final.py  test_ai_state.py  test_ai_upgrade_large.py  test_ai_upgrade_medium.py  test_command_policy.py  test_context_manifest.py  test_cpp_profile_templates.py  test_e2e_workflow.py  (+11 more)
(+150 files in other folders)
